<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/cl_main_game_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cl_game_basic_details"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/layer_list_top_purple_rounded_rectangle"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingVertical="@dimen/_12sdp"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/txtGameHeaderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/game_recycler_heading_textview_style"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Thursday 10PM"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cl_game_more_details"
            android:background="@drawable/layer_list_bottom_white_rounded_rectangle"
            app:layout_constraintTop_toBottomOf="@+id/cl_game_basic_details"
            android:layout_marginBottom="@dimen/_15sdp"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingVertical="@dimen/_5sdp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/game_recycler_heading_textview_style_black_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/starts_at"
                android:text="@string/starts_at"/>
            <ImageView
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_3sdp"
                app:layout_constraintStart_toStartOf="@+id/starts_at"
                app:layout_constraintTop_toBottomOf="@+id/starts_at"
                android:id="@+id/img_calender"
                android:src="@drawable/ic_calender"
                android:contentDescription="@null" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/img_calender"
                app:layout_constraintTop_toTopOf="@+id/img_calender"
                app:layout_constraintBottom_toBottomOf="@+id/img_calender"
                android:id="@+id/txtGameDetailDate"
                android:layout_marginStart="@dimen/_5sdp"
                tools:text="07 May 2020"
                style="@style/game_recycler_detail_textview_style_blue_color"/>

            <ImageView
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/starts_at"
                android:layout_marginTop="@dimen/_3sdp"
                android:id="@+id/img_clock"
                android:src="@drawable/ic_clock"
                android:contentDescription="@null" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/img_clock"
                app:layout_constraintTop_toTopOf="@+id/img_clock"
                app:layout_constraintBottom_toBottomOf="@+id/img_clock"
                android:id="@+id/txtGameDetailTime"
                android:layout_marginStart="@dimen/_5sdp"
                tools:text="07 May 2020"
                style="@style/game_recycler_detail_textview_style_blue_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/game_recycler_heading_textview_style_black_color"
                app:layout_constraintTop_toBottomOf="@+id/img_calender"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintStart_toStartOf="parent"
                android:singleLine="true"
                android:id="@+id/expert"
                android:text="@string/expert"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/game_recycler_heading_textview_style_black_color"
                app:layout_constraintTop_toBottomOf="@+id/expert"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/description"
                android:layout_marginBottom="@dimen/_15sdp"
                android:text="@string/see_description"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/buyTicket"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/buy_tickets"
            android:gravity="center"
            style="@style/button_style_textview"
            android:textSize="@dimen/_13ssp"
            android:background="@drawable/pink_gradient_button_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_game_more_details"
            app:layout_constraintBottom_toBottomOf="@+id/cl_game_more_details"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>